Fix List.of NPE with null GET results, revert MIGRATE to DUMP/RESTORE, refresh topology before split generation